added the cards and profiles of the tv series

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ VITE_API_KEY=api_key=00e218e41f933725c16a438507ada50f
 VITE_API=https://api.themoviedb.org/3/movie/
 VITE_SEARCH=https://api.themoviedb.org/3/search/movie
 VITE_IMG=https://image.tmdb.org/t/p/w300/
+
+VITE_TV_API=https://api.themoviedb.org/3/tv/
+VITE_TV_SEARCH=https://api.themoviedb.org/3/search/tv
+VITE_TV_IMG=https://api.themoviedb.org/3/tv/series_id/images
